--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@radix-ui/colors": "^0.1.8",
+    "@radix-ui/react-avatar": "^1.0.1",
+    "@radix-ui/react-icons": "^1.1.1",
     "@radix-ui/react-popover": "1.0.2",
     "@stitches/react": "^1.2.8",
     "@types/node": "18.11.18",
