--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@radix-ui/colors": "^0.1.8",
     "@radix-ui/react-avatar": "^1.0.1",
     "@radix-ui/react-icons": "^1.1.1",
+    "@radix-ui/react-label": "^2.0.0",
     "@radix-ui/react-popover": "1.0.2",
+    "@radix-ui/react-separator": "^1.0.1",
+    "@radix-ui/react-toolbar": "^1.0.1",
     "@stitches/react": "^1.2.8",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
