--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.1.3",
     "miragejs": "^0.1.47"
   }
 }
